# My-Minecraft-Clone

./: .cproject  .project  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.3.8/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw-3.3.8/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
libs/glfw-3.3.8/src/: Makefile  cmake_install.cmake  libglfw.so.3.3
libs/glfw-3.3.8/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
rsc/shaders/: fDefault.glsl  vDefault.glsl
src/: Block.cpp  Block.h  Camera.h  Game.cpp  Input.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  Window.cpp  Window.h
